# small_os

./: .gitignore  Cargo.toml  Embed.toml  Makefile  Makefile.toml  README.md  build.rs  data.hex  driver.ld  driver2.ld  driver3.ld  kernel.ld  link.ld  log.txt  openocd.gdb  small_os  small_os.toml  small_os_test.toml  symbols.hex
.cargo/: config.toml
adc/: Cargo.toml
adc/src/: main.rs
camera/: Cargo.toml
camera/src/: main.rs
example_program/: Cargo.toml
example_program/src/: main.rs
i2c/: Cargo.toml
i2c/src/: main.rs
io_bank0/: Cargo.toml
io_bank0/src/: main.rs
kermit/: Cargo.toml  build.rs
kermit/src/: main.rs
kernel/: Cargo.toml  build.rs
kernel/src/: clocks.rs  flash.S  inter.S  inter.rs  io_bank0.rs  main.rs  message_queue.rs  messages.rs  mmio.rs  mpu.rs  mutex.rs  nvic.rs  pads_bank0.rs  pll.rs  print.rs  proc.rs  program.rs  reset.rs  rosc.rs  schedule.S  scheduler.rs  sys_tick.rs  system.rs  test_proc.rs  timer.rs  uart.rs  vec.S  wait.rs  watchdog.rs  xosc.rs
pads_bank0/: Cargo.toml
pads_bank0/src/: main.rs
reset/: Cargo.toml  build.rs
reset/src/: main.rs
sio/: Cargo.toml
small_os_lib/: Cargo.toml  build.rs
spi/: Cargo.toml
src/: clocks.rs  inter.S  inter.rs  io_bank0.rs  main.rs  message_queue.rs  messages.rs  mutex.rs  nvic.rs  print.rs  proc.rs  reset.rs  rosc.rs  scheduler.rs  start.S  system.rs  tar.rs  test_proc.rs  timer.rs  uart.rs  vec.S  watchdog.rs  xosc.rs
test_a/: Cargo.toml
test_b/: Cargo.toml
test_driver/: Cargo.toml  build.rs
tester/: Cargo.toml
timer/: Cargo.toml
uart/: Cargo.toml
(+10 files in other folders)
