[package]
name = "kernel"
# From https://os.phil-opp.com/testing/ (accessed 6/02/2026)
test = true # Enable testing
version = "0.1.0"
edition = "2024"
authors = ["Fraser Griffin <f.griffin.22@abdn.ac.uk>"]
description = "The SmallOS microkernel"
repository = "https://github.com/F-gigabyte/small_os"
license = "LGPL-3.0-or-later"

[dependencies]
rp2040-boot2 = "0.3.0"
safe-mmio = "0.3.0"
hamming = { git = "ssh://git@github.com/F-gigabyte/hamming.git" }
crc32 = { git = "ssh://git@github.com/F-gigabyte/crc32.git" }

[build-dependencies]
cc = "1.2.53"

[features]
default = ["benchmark"]
error_codes = []
benchmark = []
random = []
radiation = ["random", "benchmark"]
